update perhitungan and user
